<resources>
    <string name="google_maps_key" translatable="false">AIzaSyAwbJFLmVWNozOF62bp-Sf6Dq8ayX7UpVE</string>
    <string name="app_name" translatable="false">Movie Box</string>
    <string name="movie_title" translatable="false">Movie Title</string>
    <string name="rating_10" translatable="false">10</string>
    <string name="movie_details" translatable="false">Some movie details</string>
    <string name="about">About:</string>
    <string name="error">Loading error!</string>
    <string name="reload">Try again!</string>
    <string name="genres">Genres:</string>
    <string name="category">Category</string>
    <string name="director">Director:</string>
    <string name="release_date">Release date:</string>
    <string name="from_tmdb" translatable="false">From TMDB</string>
    <string name="Main">Main</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="include_adult">Include adult content</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="wish_list">Wishlist</string>
    <string name="clear_all">Clear all</string>
    <string name="delete">Delete</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="warning">Warning!</string>
    <string name="delete_message">Are you sure you want to clear all </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contacts" translatable="false">contacts</string>
    <string name="share">share</string>
    <string name="need_permissions_to_read_contacts">Need permissions to read contacts!</string>
    <string name="need_permissions_to_send_sms">Need permissions to send SMS!</string>
    <string name="person_name" translatable="false">Person_name</string>
    <string name="title">Title: </string>
    <string name="rating">"Rating: "</string>
    <string name="my_recommends">"My recommends! "</string>
    <string name="choose_contact">Choose a contact to sand SMS</string>
    <string name="send_sms_to_contact">Send SMS to contact</string>
    <string name="fail_sending_sms">Fail to sand SMS!</string>
    <string name="sms_sent_success">SMS sent successfully!</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cant_find">Nothing found!</string>
    <string name="apply">Apply</string>
    <string name="year_range">Year range: </string>
    <string name="rating_range">Rating range: </string>
    <string name="any">Any</string>
    <string name="cancel">Cancel</string>
    <string name="map">Map</string>
    <string name="need_permissions_to_get_location">Need permissions to get your location!</string>
    <string name="gps_turned_off">GPS turned off</string>
    <string name="last_location_unknown">Last location unknown!</string>
    <string name="last_known_location">It is the last known location!</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="year_step" translatable="false">1.0</string>
    <string name="year_from" translatable="false">1920.0</string>
    <string name="year_to" translatable="false">2021.0</string>
    <string name="range_step" translatable="false">0.1</string>
    <string name="rating_from" translatable="false">0.0</string>
    <string name="rating_to" translatable="false">10.0</string>
    <string name="search_film">Search film...</string>
    <string name="about_app">About</string>
    <string name="attention_adult_content">Attention!!! Adult content!</string>
    <string name="adult_age_confirm">Please confirm that you are over 18 years old?</string>
    <string name="app_build_type">"Build type: "</string>
    <string name="app_version">"Version: "</string>
    <string name="app_type">"Type: "</string>
    <string name="app_id" translatable="false">"ID: "</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science fiction</string>
    <string name="tv_movie">TV movie</string>
    <string name="thriller">thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="more_films">More…</string>
    <string name="countries">Countries:</string>
    <string name="companies">Companies:</string>
    <array name="initial_range_values">
        <item>1920.0</item>
        <item>2022.0</item>
    </array>
    <array name="initial_rating_values">
        <item>0.0</item>
        <item>10.0</item>
    </array>
</resources>