<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/filter_progress_bar"
        layout="@layout/item_progress_bar"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/filter_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical"
            tools:context=".ui.profile.SettingsFragment">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_8"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_year_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_range"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/year_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="@string/year_step"
                android:valueFrom="@string/year_from"
                android:valueTo="@string/year_to"
                app:values="@array/initial_range_values" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_rating_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_range"
                android:textSize="@dimen/text_size_16" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rating_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="@string/range_step"
                android:valueFrom="@string/rating_from"
                android:valueTo="@string/rating_to"
                app:values="@array/initial_rating_values" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_genre_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textSize="@dimen/text_size_16" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/genres_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:ellipsize="none"
                android:text="@string/any"
                android:textAlignment="textStart"
                android:textAllCaps="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_8"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/apply" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>