<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.profile.SettingsFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <View
            android:id="@+id/split_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="@dimen/margin_8"
            android:background="@color/cardview_dark_background" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/include_adult" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>