<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:title="@string/app_name"
            app:menu="@menu/menu_details"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_height_500"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                tools:background="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:gravity="center"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/img_poster"
                tools:text="@string/movie_title" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_144"
                android:layout_marginTop="@dimen/margin_12"
                android:stepSize="0.1"
                app:layout_constraintEnd_toStartOf="@+id/text_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_144"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="@string/rating_10" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_adult"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toEndOf="@+id/text_rating"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                app:srcCompat="@drawable/ic_adultsonly" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/genres"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_genres_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="@+id/img_poster"
                app:layout_constraintTop_toBottomOf="@+id/text_genres"
                tools:text="@string/movie_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/release_date"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_genres_list" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_release_date"
                tools:text="@string/movie_details" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/about"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_about"
                tools:text="@string/movie_details" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/by_text"
                android:layout_width="180dp"
                android:layout_height="12dp"
                android:layout_marginTop="@dimen/margin_32"
                android:layout_marginBottom="@dimen/margin_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details"
                app:srcCompat="@drawable/ic_blue_short_8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c" />

            <ProgressBar
                android:id="@+id/details_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/details_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                app:constraint_referenced_ids="img_poster,text_title,
            rating_bar,text_rating,text_genres,text_genres_list,
            text_release_date,text_date,text_about,text_details,
            by_text, image_adult"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
